<resources>
    <string name="app_name">Register_Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="bychecking">By checking the box you agree to our Terms and Conditions.</string>
    <string name="alreadyhave">Already Have an Account?</string>
    <string name="login">Login</string>
    <string name="rememberme">Remember Me</string>
    <string name="forgetpass">Forget Password ?</string>
    <string name="newmember">New Member?</string>
    <string name="welcome">Welcome</string>

</resources>